fixed drag on mobile

--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -36,6 +36,7 @@
 .draggable {
   margin: 2px;
   z-index: 100;
+  touch-action: none;
   // &:hover {
   //   z-index: 102;
   // }
